Fix button overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,21 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: #f5f5f5;
 }
+
+.chip-row {
+  height: 25px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+  margin-top: 3px;
+}
+
+.chip-row a {
+  min-width: fit-content;
+}
+
+.chip-row::-webkit-scrollbar {
+  display: none;
+}
